content(java): update Code Coverage with JaCoCo and Maven