@@ -1,6 +1,4 @@
-package dev.mflash.guides.java.coverage.jacoco;
-
-import static org.assertj.core.api.Assertions.assertThat;
+package com.example;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -9,10 +7,12 @@ import org.junit.jupiter.params.provider.CsvFileSource;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
 class FibonacciTest {
 
   private final List<Integer> fibonacciViaLoop = Fibonacci.fibonacciViaLoop(15);
-  private final List<Fibonacci.Pair> fibonacciViaStream = Fibonacci.fibonacciViaStream(15).collect(Collectors.toList());
+  private final List<Fibonacci.Pair> fibonacciViaStream = Fibonacci.fibonacciViaStream(15).toList();
 
   @ParameterizedTest
   @DisplayName("Should get fibonacci at number via loop")
@@ -25,7 +25,7 @@ class FibonacciTest {
   @DisplayName("Should get fibonacci at number via stream")
   @CsvFileSource(resources = "fibonacciDataSet.csv", numLinesToSkip = 1)
   void shouldGetFibonacciAtNumberViaStream(int input, int fibonacci) {
-    assertThat(fibonacciViaStream.get(input - 1).previous).isEqualTo(fibonacci);
+    assertThat(fibonacciViaStream.get(input - 1).previous()).isEqualTo(fibonacci);
   }
 
   @ParameterizedTest
